0.1_demo/L0/app/src/main/java/com/example/fileSystem/error/errPath.java
package com.example.fileSystem.error;

public class errPath extends error {
    public errPath(String message) {
        super(message);
    }
}